--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karen Rosa</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Karen Rosa - Psicologia</title>
 </head>
+
 <body>
-    <h1>Karen Rosa</h1>
+    <nav class="nav-menu">
+        <ul>
+            <li><a href="#"><b>Karen Rosa</b></a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Últimos Conteúdos</a></li>
+            <li><a href="#">Marcar Consulta</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </body>
+
 </html>
